Fix couple of spacing issues on Binance page

--- a/components/pages/binance/01_hero/binance-hero.module.scss
+++ b/components/pages/binance/01_hero/binance-hero.module.scss
@@ -7,15 +7,6 @@
   overflow: hidden;
   margin-top: -4rem;
 
-  @include media-breakpoint-up(md) {
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
-  @include media-breakpoint-up(lg) {
-    margin-top: -4rem;
-  }
-
   &::after {
     content: '';
     display: block;
@@ -29,9 +20,18 @@
 
   background-image: url('/images/binance/hero-binance-mobile.jpg');
   background-position: 50% 100%;
+
   @include media-breakpoint-up(md) {
+    background-size: cover;
+    background-repeat: no-repeat;
     background-image: url('/images/binance/hero-binance.jpg');
-    background-position: 50% 50%;
+    background-position: 50% 0%;
+
+    margin-top: -4rem;
+  }
+
+  @include media-breakpoint-up(lg) {
+    margin-top: -10rem;
   }
 }
 
@@ -45,10 +45,10 @@
   text-align: center;
   z-index: 2;
 
-  height: calc(85vh);
+  min-height: calc(100vh);
 
   @include media-breakpoint-up(lg) {
-    height: 75vh;
+    min-height: 75vh;
     min-height: 700px;
   }
 }
@@ -57,7 +57,7 @@
   margin: 0 auto;
   width: 100%;
   max-width: 1150px;
-  padding: 0 14px;
+  padding: 96px 12px 48px 12px;
 
   @include media-breakpoint-up(lg) {
     padding: 120px 72px 0 72px;
