--- a/components/pages/binance/02_intro/edgeware-intro.module.scss
+++ b/components/pages/binance/02_intro/edgeware-intro.module.scss
@@ -3,9 +3,9 @@
 .wrapper {
   text-align: center;
   max-width: 760px;
-  margin: 0 var(--spacing-m);
+  margin: 0 var(--spacing-s);
   border: 1px solid var(--grey-500);
-  padding: var(--spacing-m);
+  padding: var(--spacing-s);
   border-radius: var(--br-s);
 
   background: url('/images/backgrounds/edg-logomark-bg.svg') 50% 50% no-repeat;
